# pujaguide

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/pujaguide/: __init__.py  cli.py  models.py  report.py
src/pujaguide/guide/: __init__.py  calendar.py  timer.py
src/pujaguide/rituals/: __init__.py  mantras.py  materials.py  pujas.py
tests/: test_benchmark.py  test_core.py  test_integration.py  test_pujaguide.py
